<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Word Story</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="update">Update</string>
    <string name="or">Or</string>
    <string name="do_not_have_an_account">Do not have an account</string>
    <string name="welcome_to_book_app">Welcome to Book App</string>
    <string name="continue_without_login">Continue Without Login</string>
    <string name="edit_book_info">Edit Book Info</string>

    <string name="full_name">Full Name</string>
    <string name="account">Account</string>
    <string name="member">Member</string>
    <string name="favorite_books">Favorite Books</string>
    <string name="read_book">Read Book</string>
    <string name="comment">Comment</string>
    <string name="do_you_already_have_an_account">Do you already have an account</string>

    <string name="home">Home</string>
    <string name="libary">Libary</string>
    <string name="favorite">Favorite</string>
    <string name="account_status">Account Status</string>
    <string name="search">Search</string>
    <string name="person">Person</string>
    <string name="books">Books</string>
    <string name="profile">Profile</string>
    <string name="forgotPass">Forgot Password?</string>
    <string name="dashboard_admin">Dashboard Admin</string>
    <string name="dashboard_user">Dashboard User</string>

    <string name="please_wait">Please wait...</string>
    <string name="enter_title">Enter title...</string>
    <string name="enter_name">Enter name...</string>
    <string name="enter_description">Enter description...</string>
    <string name="select_category">Select category...</string>
    <string name="select_file_PDF">Select file PDF...</string>
    <string name="upload_PDF_file">Upload PDF files</string>
    <string name="upload_PDF_faile">Upload failed</string>
    <string name="loading_files">Loading files...</string>
    <string name="upload_success">Upload successfully...</string>
    <string name="upload_failed">Upload failed...</string>
    <string name="deselect_files">Deselect files</string>

    <string name="update_user_profile">Update user profile...</string>
    <string name="profile_updated">Profile updated...</string>
    <string name="profile_updated_failed">Profile updated failed...</string>
    <string name="updating_images">Updating images...</string>
    <string name="failed">Failed...</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancelled">Cancelled</string>

    <string name="please_enter_category">Please enter category...</string>
    <string name="add_category">Add Category...</string>
    <string name="more_success">More success...</string>
    <string name="not_logged_in">Not Logged In</string>
    <string name="you_are_not_logged_in">You are not logged in ...</string>
    <string name="enter_comment">Enter comment...</string>
    <string name="add_comment">Add comment...</string>
    <string name="add_comment1">Add comment</string>
    <string name="added_a_comment">Added a comment...</string>
    <string name="access_denied">Access denied ...</string>
    <string name="remove_favorite">Remove Favorite...</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="delete">Delete</string>
    <string name="do_you_want_to_delete">Do you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="deleting">Deleting...</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="successfully_deleted">Successfully deleted...</string>
    <string name="delete_comment">Delete Comment</string>
    <string name="are_you_sure_you_want_to_delete_this_comment">Are you sure you want to delete this comment?</string>

    <string name="invalid_email_pattern">Invalid email pattern</string>
    <string name="enter_password">Enter password... </string>
    <string name="loggin_in">Loggin In... </string>
    <string name="checking_user">Checking User...</string>
    <string name="updating_book_info">Updating book info ...</string>
    <string name="book_info_updated">Book info updated ...</string>
    <string name="choose_category">Choose Category</string>
    <string name="error_on_page">Error on page</string>

    <string name="enter_you_name">Enter you name... </string>
    <string name="enter_you_pass">Enter you password... </string>
    <string name="confirm_pass">Confirm Password... !</string>
    <string name="creating_account">Creating account...</string>
    <string name="saving_user_info">Saving user info... </string>
    <string name="choose_options">Choose Options</string>
    <string name="downloading">Downloading...</string>
    <string name="saved_to_download_folder">Saved to Download Folder</string>
    <string name="password_does_not_match">Password does not match...!</string>
    <string name="book_deleted_successfully">Book deleted Successfully...</string>
    <string name="book_deleted_failed">Book deleted Successfully...</string>

    <string name="add_to_your_favorites_list">Add to your favorites list ...</string>
    <string name="remove_from_your_favorites_list">Remove from your favorites list ...</string>

    <string name="add_new_book">Add new book</string>
    <string name="book_title">Book Title</string>
    <string name="book_description">Book Description</string>
    <string name="book_category">Book Category</string>
    <string name="upload">Upload</string>
    <string name="category_title">Category Title</string>
    <string name="submit">Submit</string>
    <string name="add_catergory">+ Add Category</string>
    <string name="book_detail">Book Detail</string>
    <string name="title_of_book">Title of Book</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="size">Size</string>
    <string name="views">Views</string>
    <string name="downloads">Downloads</string>
    <string name="pages">Pages</string>
    <string name="comments">Comments</string>
    <string name="read">Read</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="the_description_of_the_book">The description of the book</string>

    <string name="enter_email_forgot">Enter your register email address to receiver instructions to reset you password.</string>
    <string name="enter_email">Enter Email</string>
</resources>